kube/deploy/services/matrix/synapse/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse
spec:
  routes:
    - match: Host(`matrix.${EXTERNAL_DOMAIN}`) && (Pathprefix(`/_matrix`) || Pathprefix(`/_synapse`))
      kind: Rule
      services:
        - name: synapse-matrix-synapse
          port: 8008
    - match: Host(`matrix.${EXTERNAL_DOMAIN}`) && Pathprefix(`/.well-known/matrix/`)
      kind: Rule
      services:
        - name: synapse-wellknown-lighttpd
          port: 80
  tls:
    secretName: tls-cert-matrix.${EXTERNAL_DOMAIN}
    domains:
      - main: matrix.${EXTERNAL_DOMAIN}
