kube/deploy/services/matrix/synapse/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-apiserver-to-synapse-job
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: synapse-signingkey-job
  egress:
    - toEntities: [kube-apiserver]
